--- a/chat-react/package.json
+++ b/chat-react/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "dotenv": "^4.0.0",
+    "materialize": "^1.0.0",
     "react": "^16.1.0",
     "react-dom": "^16.1.0",
     "react-scripts": "1.0.17"
